--- a/res/xml/top_level_settings.xml
+++ b/res/xml/top_level_settings.xml
@@ -34,7 +34,6 @@
         android:title="@string/about_settings"
         android:summary="@string/summary_placeholder"
         settings:highlightableMenuKey="@string/menu_key_about_device"
-        settings:layout="@layout/afterlab_cardview_single_left"
         settings:controller="com.android.settings.deviceinfo.aboutphone.TopLevelAboutDevicePreferenceController"/>
 
     <com.android.settings.widget.HomepagePreference
@@ -43,7 +42,6 @@
         android:summary="@string/build_tweaks_summary_title"
         android:icon="@drawable/ic_settings_afterlab"
         android:order="-200"
-        settings:layout="@layout/afterlab_cardview_single_right"
         settings:highlightableMenuKey="@string/menu_key_afterlab"
         android:fragment="com.afterlife.afterlab.CustomizeDashboard"
         settings:controller="com.afterlife.afterlab.TopLevelExtensionsEntryPreferenceController" />
@@ -52,16 +50,14 @@
         android:title="Airplane mode"
         android:key="airplane_mode"
         android:order="-180"
-        settings:controller="com.android.settings.network.AirplaneModePreferenceController"
-        settings:layout="@layout/afterlab_cardview_top_switch" />
+        settings:controller="com.android.settings.network.AirplaneModePreferenceController" />
 
     <Preference
         android:title="Connectivity"
         android:key="internet_settings"
         android:summary="@string/summary_placeholder"
         android:order="-180"
-        android:fragment="com.android.settings.network.NetworkDashboardFragment"
-        settings:layout="@layout/afterlab_cardview_middle" />
+        android:fragment="com.android.settings.network.NetworkDashboardFragment" />
 
     <Preference
         android:title="Portable hotspot"
@@ -69,8 +65,7 @@
         android:summary="@string/summary_placeholder"
         android:order="-160"
         android:fragment="com.android.settings.network.tether.TetherSettings"
-        settings:controller="com.android.settings.network.TetherPreferenceController"
-        settings:layout="@layout/afterlab_cardview_middle" />
+        settings:controller="com.android.settings.network.TetherPreferenceController" />
 
     <Preference
         android:title="@string/connected_devices_dashboard_title"
@@ -78,32 +73,28 @@
         android:order="-140"
         android:fragment="com.android.settings.connecteddevice.ConnectedDeviceDashboardFragment"
         settings:controller="com.android.settings.connecteddevice.TopLevelConnectedDevicesPreferenceController"
-        settings:highlightableMenuKey="@string/menu_key_connected_devices"
-        settings:layout="@layout/afterlab_cardview_bottom" />
+        settings:highlightableMenuKey="@string/menu_key_connected_devices" />
 
     <Preference
         android:title="@string/apps_dashboard_title"
         android:key="top_level_apps"
         android:order="-130"
         android:fragment="com.android.settings.applications.AppDashboardFragment"
-        settings:highlightableMenuKey="@string/menu_key_apps"
-        settings:layout="@layout/afterlab_cardview_top" />
+        settings:highlightableMenuKey="@string/menu_key_apps" />
 
     <Preference
         android:title="@string/configure_notification_settings"
         android:key="top_level_notifications"
         android:order="-120"
         android:fragment="com.android.settings.notification.ConfigureNotificationSettings"
-        settings:highlightableMenuKey="@string/menu_key_notifications"
-        settings:layout="@layout/afterlab_cardview_middle" />
+        settings:highlightableMenuKey="@string/menu_key_notifications" />
 
     <Preference
         android:title="@string/sound_settings"
         android:key="top_level_sound"
         android:order="-110"
         android:fragment="com.android.settings.notification.SoundSettings"
-        settings:highlightableMenuKey="@string/menu_key_sound"
-        settings:layout="@layout/afterlab_cardview_middle" />
+        settings:highlightableMenuKey="@string/menu_key_sound" />
 
     <Preference
         android:title="@string/display_settings"
@@ -111,8 +102,7 @@
         android:order="-100"
         android:fragment="com.android.settings.DisplaySettings"
         settings:controller="com.android.settings.display.TopLevelDisplayPreferenceController"
-        settings:highlightableMenuKey="@string/menu_key_display"
-        settings:layout="@layout/afterlab_cardview_middle" />
+        settings:highlightableMenuKey="@string/menu_key_display" />
 
     <com.android.settings.widget.RestrictedHomepagePreference
         android:key="top_level_wallpaper"
@@ -120,7 +110,6 @@
         android:title="@string/wallpaper_settings_title"
         android:summary="@string/wallpaper_dashboard_summary"
         settings:highlightableMenuKey="@string/menu_key_wallpaper"
-        settings:layout="@layout/afterlab_cardview_bottom"
         settings:controller="com.android.settings.display.TopLevelWallpaperPreferenceController"/>
 
     <Preference
@@ -130,8 +119,7 @@
         android:order="-80"
         android:fragment="com.android.settings.fuelgauge.batteryusage.PowerUsageSummary"
         settings:controller="com.android.settings.fuelgauge.TopLevelBatteryPreferenceController"
-        settings:highlightableMenuKey="@string/menu_key_battery"
-        settings:layout="@layout/afterlab_cardview_top" />
+        settings:highlightableMenuKey="@string/menu_key_battery" />
 
     <Preference
         android:title="@string/storage_settings"
@@ -140,8 +128,7 @@
         android:order="-70"
         android:fragment="com.android.settings.deviceinfo.StorageDashboardFragment"
         settings:controller="com.android.settings.deviceinfo.TopLevelStoragePreferenceController"
-        settings:highlightableMenuKey="@string/menu_key_storage"
-        settings:layout="@layout/afterlab_cardview_bottom" />
+        settings:highlightableMenuKey="@string/menu_key_storage" />
 
     <Preference
         android:title="@string/accessibility_settings"
@@ -149,16 +136,14 @@
         android:order="-60"
         android:fragment="com.android.settings.accessibility.AccessibilitySettings"
         settings:controller="com.android.settings.accessibility.TopLevelAccessibilityPreferenceController"
-        settings:highlightableMenuKey="@string/menu_key_accessibility"
-        settings:layout="@layout/afterlab_cardview_top" />
+        settings:highlightableMenuKey="@string/menu_key_accessibility" />
 
     <Preference
         android:title="@string/safety_center_title"
         android:key="top_level_safety_center"
         android:order="-55"
         settings:controller="com.android.settings.safetycenter.TopLevelSafetyCenterEntryPreferenceController"
-        settings:highlightableMenuKey="@string/menu_key_safety_center"
-        settings:layout="@layout/afterlab_cardview_middle" />
+        settings:highlightableMenuKey="@string/menu_key_safety_center" />
         
     <Preference
         android:title="@string/security_settings_title"
@@ -166,8 +151,7 @@
         android:order="-50"
         android:fragment="com.android.settings.security.SecuritySettings"
         settings:controller="com.android.settings.security.TopLevelSecurityEntryPreferenceController"
-        settings:highlightableMenuKey="@string/menu_key_security"
-        settings:layout="@layout/afterlab_cardview_middle" />
+        settings:highlightableMenuKey="@string/menu_key_security" />
 
     <Preference
         android:title="@string/privacy_dashboard_title"
@@ -175,8 +159,7 @@
         android:order="-40"
         android:fragment="com.android.settings.privacy.PrivacyDashboardFragment"
         settings:controller="com.android.settings.privacy.TopLevelPrivacyEntryPreferenceController"
-        settings:highlightableMenuKey="@string/menu_key_privacy"
-        settings:layout="@layout/afterlab_cardview_middle" />
+        settings:highlightableMenuKey="@string/menu_key_privacy" />
 
     <Preference
         android:title="@string/location_settings_title"
@@ -185,8 +168,7 @@
         android:order="-30"
         android:fragment="com.android.settings.location.LocationSettings"
         settings:controller="com.android.settings.location.TopLevelLocationPreferenceController"
-        settings:highlightableMenuKey="@string/menu_key_location"
-        settings:layout="@layout/afterlab_cardview_bottom" />
+        settings:highlightableMenuKey="@string/menu_key_location" />
 
     <Preference
         android:title="@string/emergency_settings_preference_title"
@@ -194,23 +176,20 @@
         android:order="-20"
         android:fragment="com.android.settings.emergency.EmergencyDashboardFragment"
         settings:highlightableMenuKey="@string/menu_key_emergency"
-        settings:isPreferenceVisible="@bool/config_show_emergency_settings"
-        settings:layout="@layout/afterlab_cardview_top" />
+        settings:isPreferenceVisible="@bool/config_show_emergency_settings" />
 
     <Preference
         android:title="@string/account_dashboard_title"
         android:key="top_level_accounts"
         android:order="-10"
-        android:fragment="com.android.settings.accounts.AccountDashboardFragment"
-        settings:layout="@layout/afterlab_cardview_middle" />
+        android:fragment="com.android.settings.accounts.AccountDashboardFragment" />
 
     <Preference
         android:title="@string/header_category_system"
         android:key="top_level_system"
         android:order="10"
         android:fragment="com.android.settings.system.SystemDashboardFragment"
-        settings:highlightableMenuKey="@string/menu_key_system"
-        settings:layout="@layout/afterlab_cardview_bottom" />
+        settings:highlightableMenuKey="@string/menu_key_system" />
 
     <Preference
         android:title="@string/page_tab_title_support"
